# buibui-moon-trader-bot

./: .dockerignore  .env.example  .gitignore  .markdownlint-cli2.jsonc  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Makefile  README.md  buibui.py  debug_orders.py  docker-compose.yml  pr-signal-quality.md  pyproject.toml  requirements.txt  ruff.toml
.claude/context/: analytics.md  signals.md  web.md
.claude/skills/: angular-frontend-dev.md  atr-sweep.md  backtest-findings.md  backtest-run.md  new-strategy.md  param-sweep-apply.md  post-branch.md  pr-summary.md  recalibrate.md  sanity-check.md  signal-watch.md  stats-dashboard.md  tp-sweep.md  volume-sweep.md
.github/: dependabot.yml  pull_request_template.md
.github/scripts/: update-skills.sh
.github/workflows/: docker-build.yaml  lint.yaml  monitor.yaml  security-scan.yaml  signal-watch.yaml  update-skills.yaml  verify-data-source.yaml
analytics/: analytics_runner.py  audit_guard.py  backtest_config.py  backtest_lib.py  backtest_runner.py  cme_gap_lib.py  data_fetcher.py  data_store.py  data_sync.py  digest_lib.py  indicators_lib.py  param_sweep.py  perf_timer.py  recalibrate_lib.py  recalibrate_runner.py  reference_levels.py  regime.py  signal_config.py  signal_lib.py  signal_runner.py  signal_test_runner.py  stats_lib.py  structural_entry_sim.py  structural_touch.py  sweep_guard.py  universe.py  zones_lib.py
analytics/backtest/: __init__.py  combo.py  cross_tf.py  engine.py  formatters.py  gates.py  live_parity_config.py
analytics/carry/: __init__.py  book.py  config.py  forecast.py  replay.py  report.py
analytics/combine/: __init__.py  book.py  config.py  idm.py  replay.py  report.py
analytics/exits/: __init__.py  audit.py  mfe_mae.py  policies.py  replay.py
analytics/forecast/: __init__.py  book.py  config.py  ewmac.py  replay.py  report.py  vol.py  weights.py
analytics/research_guards/: __init__.py  bootstrap.py  dsr.py  haircut.py  mintrl.py  pbo.py  psr.py
analytics/signal/: __init__.py  _common.py  atr_floor.py  bt_cache.py  cofire.py  gates.py  outcome_backfill.py  resolvers.py  scanner.py  stats_context.py  types.py
analytics/stats/: __init__.py  _common.py  adr.py  bundle.py  daily_distance.py  dow.py  hourly.py  live_outcomes.py  p1p2.py  session.py  weekly_flip_risk.py  weekly_p1p2.py  weekly_p2_timing.py  weekly_state.py  weekly_wick.py
analytics/store/: __init__.py  _common.py  backtest_cache.py  backtest_runs.py  combos.py  confidence.py  market_data.py  schema.py  signals.py  stats_cache.py
analytics/strategies/: __init__.py  _base.py  _registry.py  _seasonality.py  _shared.py  cvd_divergence.py  doji.py  ema.py  engulfing.py  eqh_eql.py  fib_golden_zone.py  fibonacci_retracement.py  funding_extreme.py  fvg.py  hammer_hanging_man.py  inside_bar.py  liquidity_sweep.py  market_structure.py  marubozu_retest.py  morning_evening_star.py  orb_breakout.py  order_block.py  ote_entry.py  pin_bar.py  smt_divergence.py  trend_day.py  wick_fills.py
analytics/xsmom/: __init__.py  book.py  diagnostics.py  execution.py  live.py  replay.py  report.py
cli/: __init__.py  _common.py  analytics.py  backtest.py  digest.py  main.py  monitor.py  param.py  portfolio.py  recalibrate.py  signal.py  web.py
config/: backtest_sample.toml  coins.json.example  conservative.toml  scalping.toml  signal_watch.toml  signal_watch_all.toml  signal_watch_weekdays.toml  strategy_params.toml  swing.toml  universe.toml
deploy/: README.md  harden.sh  oci-retry-launch.sh  run-job.sh  run-signal.sh  run-xsmom.sh
deploy/systemd/: buibui-signal-watch.service  buibui-signal-watch.timer  buibui-xsmom.service  buibui-xsmom.timer
docs/: perf-baseline-2026-04-27.md  perf-baseline-phase2-close.md  strategy_audit.md  system-overview.md
docs/audits/: 2026-05-17-adr-exempt.md  2026-05-17-adr-suppress-threshold.md  2026-05-17-volume-spike-boost.md  2026-05-18-bucket-c-toml.md  (+23 more)
migrations/: 001_day_filter_text.py
monitor/: live_position.py  live_price.py  position_lib.py  position_monitor.py  price_lib.py  price_monitor copy.py  price_monitor.py
portfolio/: __init__.py  book.py  metrics.py  replay.py  report.py  sizing.py
scripts/: db_prune_backtests.py  extract_regression_fixture.py  profile_suite.py
signals/: alert_formatter.py  cooldown_store.py  registry.py
tests/: conftest.py  test_adr_threshold_audit.py  test_alert_formatter.py  test_analytics_runner.py  test_atr_floor_live.py  test_audit_guard.py  test_backfill_null_tp_outcomes.py  test_backtest_config.py  test_backtest_filter.py  test_backtest_lib.py  test_backtest_runner.py  test_binance_client.py  test_bootstrap.py  test_candle_patterns.py  test_candle_warnings.py  test_carry_book.py  test_carry_config.py  test_carry_forecast.py  test_carry_init.py  test_carry_replay.py  test_carry_report.py  test_cli.py  test_cli_analytics.py  test_cli_signal.py  test_cme_gap_lib.py  test_combo_backtest.py  test_config_validation.py  test_cooldown_store.py  test_cross_tf_cofire.py  test_data_coverage_report.py  test_data_fetcher.py  test_data_store.py  test_data_sync.py  test_digest_lib.py  test_direction_filter_gate.py  test_dsr.py  test_exit_audit.py  test_exit_policies.py  test_exit_replay.py  test_export_live_db.py  (+71 more)
tools/: __init__.py  adr_threshold_audit.py  backfill_null_tp_outcomes.py  bos_routing_audit.py  carry_audit.py  combine_audit.py  combo_health.py  data_coverage_report.py  direction_filter_replay.py  exit_audit.py  export_live_db.py  forecast_audit.py  gate_audit.py  htf_ema_gate_replay.py  journal_fetch.py  live_outcomes_report.py  reference_level_proximity_audit.py  regime_gate_replay.py  regime_threshold_sweep.py  select_universe.py  strategy_edge_audit.py  structural_entry_sim_audit.py  structural_touch_decay_audit.py  x_fetch.py  x_route.py  xsmom_audit.py  xsmom_capacity_audit.py  xsmom_execute.py  xsmom_targets.py
trade/: binance_futures.py  overlay.py  routing.py  xsmom_executor.py
utils/: binance_client.py  config_validation.py  indicators.py  live_loop.py  live_store.py  okx_client.py  rich_display.py  telegram.py  websocket_handler.py
(+202 files in other folders)
