[project]
name = "buibui-moon-trader-bot"
version = "0.1.0"
description = ""
authors = [
    {name = "s10023",email = "ngkhaijian@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "aiohappyeyeballs (>=2.6.1,<3.0.0)",
    "aiohttp (>=3.13.5,<4.0.0)",
    "aiosignal (>=1.4.0,<2.0.0)",
    "async-timeout (>=5.0.1,<6.0.0)",
    "attrs (>=25.3.0,<26.0.0)",
    "certifi (>=2025.6.15,<2026.0.0)",
    "charset-normalizer (>=3.4.2,<4.0.0)",
    "click (>=8.3.3,<9.0.0)",
    "colorama (>=0.4.6,<0.5.0)",
    "dateparser (>=1.2.2,<2.0.0)",
    "frozenlist (>=1.7.0,<2.0.0)",
    "idna (>=3.14,<4.0)",
    "multidict (>=6.6.3,<7.0.0)",
    "mypy-extensions (>=1.1.0,<2.0.0)",
    "packaging (>=25.0,<26.0)",
    "pathspec (>=0.12.1,<0.13.0)",
    "platformdirs (>=4.9.6,<5.0.0)",
    "propcache (>=0.3.2,<0.4.0)",
    "pycryptodome (>=3.23.0,<4.0.0)",
    "python-binance (>=1.0.29,<2.0.0)",
    "python-dateutil (>=2.9.0.post0,<3.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "regex (>=2024.11.6,<2025.0.0)",
    "requests (>=2.34.0,<3.0.0)",
    "schedule (>=1.2.2,<2.0.0)",
    "six (>=1.17.0,<2.0.0)",
    "tabulate (>=0.9.0,<0.10.0)",
    "tomli (>=2.2.1,<3.0.0)",
    "typing-extensions (>=4.14.1,<5.0.0)",
    "tzdata (>=2025.2,<2026.0)",
    "tzlocal (>=5.3.1,<6.0.0)",
    "urllib3 (>=2.7.0,<3.0.0)",
    "websockets (>=15.0.1,<16.0.0)",
    "yarl (>=1.20.1,<2.0.0)",
    "rich (>=14.3.4,<15.0.0)",
    "duckdb (>=1.5.2,<2.0.0)",
    "pandas (>=3.0.3,<4.0.0)",
    "fastapi (>=0.136.1)",
    "uvicorn[standard] (>=0.46.0)",
    "pyarrow (>=23.0.1,<24.0.0)"
]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
mypy = "^1.19.1"
types-requests = "^2.33.0.20260508"
types-tabulate = "^0.10.0.20260508"
types-colorama = "^0.4.15.20260508"
pytest = "^9.0.3"
pytest-mock = "^3.15.1"
pre-commit = "^4.6.0"
ruff = "^0.15.12"
pytest-cov = "^7.1.0"
pandas-stubs = "^3.0.0.260204"
httpx = "^0.28.1"
pytest-timeout = "^2.4.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
timeout = 30

[tool.mypy]
python_version = "3.13"
ignore_missing_imports = false
disallow_untyped_defs = true
disallow_incomplete_defs = true
warn_unused_ignores = true
warn_return_any = true

[[tool.mypy.overrides]]
module = "binance.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "duckdb.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "uvicorn.*"
ignore_missing_imports = true

[tool.coverage.run]
source = ["buibui", "monitor", "utils", "analytics", "web"]

[tool.coverage.report]
show_missing = true
skip_empty = true

[tool.ruff]
target-version = "py313"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "SIM", "C4", "PIE"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"web/api/**/*.py" = ["B008"]
